[package]
name = "sparse-bitfield"
version = "0.7.1-alpha.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/sparse-bitfield"
documentation = "https://docs.rs/sparse-bitfield"
description = "Bitfield that allocates a series of small buffers"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
memory-pager = "0.6.0"

[dev-dependencies]
proptest = "0.6.0"
