[package]
name = "sparse-bitfield"
version = "0.8.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datrs/sparse-bitfield"
documentation = "https://docs.rs/sparse-bitfield"
description = "Bitfield that allocates a series of small buffers"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
memory-pager = "0.8.0"
failure = "0.1.2"

[dev-dependencies]
proptest = "0.9.0"
